<resources>
    <string name="app_name">Faster</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause">Pause</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="settings">Settings</string>
    <string name="set_theme">Set theme:</string>
    <string name="top_10">Top 10</string>
    <string name="gifts">Gifts</string>
    <string name="play_again">play again</string>
    <string name="your_score_is">Your score is:</string>
    <string-array name="themes_array">
        <item>Default</item>
        <item>Dark mode</item>
        <item>Light mode</item>
    </string-array>
</resources>